Fixed horizontal scroll bar appearing on HomePage

--- a/freelanster/src/App.css
+++ b/freelanster/src/App.css
@@ -69,7 +69,7 @@ body {
 
 .Carcontainer {
   position: relative;
-  width: 98.9vw;
+  width: 97.9vw;
   height: 84vh;
   display: flex;
   justify-content: center;
